# degen-party

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.rust  Dockerfile.server  Dockerfile.ui  README.md  config.toml  docker-entrypoint.sh  nginx.conf  package.json  vite.config.ts
.github/workflows/: cargo_update.yml  docker.yml
board-game-engine/: Cargo.toml
board-game-engine/crash_game/: Cargo.toml
board-game-engine/crash_game/src/: lib.rs  main.rs  utils.rs
board-game-engine/rollup/: Cargo.toml  build.rs
board-game-engine/rollup/src/: crash_game.rs  fake_lane_manager.rs  game_state.rs  lib.rs  main.rs  websocket.rs
board-game-engine/wasm-bindings/: Cargo.toml  Readme.md
board-game-engine/wasm-bindings/src/: lib.rs
board-game-engine/zkprogram/: Cargo.toml
board-game-engine/zkprogram/src/: lib.rs  main.rs
board-game-engine/zkprogram/src/game/: board.rs  dice.rs  mod.rs  player.rs  utils.rs
board_game_engine/: Cargo.toml
board_game_engine/src/: crash_game.rs  fake_lane_manager.rs  game_state.rs  lib.rs  main.rs
contracts/: Cargo.toml  build.rs  metadata.rs
contracts/board_game/: Cargo.toml
contracts/board_game/src/: lib.rs  main.rs
contracts/board_game/src/game/: dice.rs  mod.rs  player.rs  utils.rs
contracts/crash_game/: Cargo.toml
contracts/crash_game/src/: lib.rs  main.rs  utils.rs
contracts/zkprogram/: Cargo.toml
contracts/zkprogram/src/: lib.rs  main.rs
contracts/zkprogram/src/game/: board.rs  mod.rs  utils.rs
degen_party/: Cargo.toml
degen_party/src/: conf_defaults.toml  crash_game.rs  debug.rs  ensure_registration.rs  fake_lane_manager.rs  game_state.rs  lib.rs  main.rs  proving.rs  rollup_execution.rs
degen_party/src/rollup_execution/: crash_game.rs  game_state.rs
elf/: board_game  crash_game
front/: bun.lockb  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
front/src/: App.vue  main.ts  style.css
front/src/components/: Backdrop.vue  BettingPhase.vue  Board.vue  CrashGame.vue  CrashGameHelper.ts  Header.vue  Lobby.vue  PlayerBar.vue  SpinningWheel.vue  animState.ts
front/src/game_data/: auth.ts  crash.ts  game_data.ts
front/src/router/: index.ts
front/src/utils/: Chat.vue  audio.ts  balance.ts  base-websocket.ts  shared-websocket.ts  wallet.ts
src/components/: Board.vue  ConfettiEffect.vue  CrashGame.vue  CrashGameHelper.ts  DiceModal.vue  GridBoard.vue
src/game_data/: crash.ts  game_data.ts
src/router/: index.ts
src/utils/: base-websocket.ts  shared-websocket.ts
wallet-wrapper/: package-lock.json  package.json  tsconfig.json  vite.config.js
wallet-wrapper/src/: lib.ts  wrapper.tsx
