[workspace]
resolver = "2"
members = [
    "contracts",
    "contracts/crash_game",
    "contracts/board_game",
    "degen_party",
]

[workspace.dependencies]
sdk = { git = "https://github.com/Hyle-org/hyle.git", branch = "main", package = "hyle-contract-sdk" }
client-sdk = { git = "https://github.com/Hyle-org/hyle.git", branch = "main", default-features = false, package = "hyle-client-sdk" }
hyle-modules = { git = "https://github.com/Hyle-org/hyle.git", branch = "main", package = "hyle-modules" }
hyle-hyllar = { git = "https://github.com/Hyle-org/hyle.git", branch = "main", default-features = false, package = "hyle-hyllar" }
hyle-hydentity = { git = "https://github.com/Hyle-org/hyle.git", branch = "main", package = "hyle-hydentity" }
wallet = { git = "https://github.com/hyli-org/wallet.git", branch = "main", package = "wallet", default-features = false }
smt-token = { git = "https://github.com/hyle-org/hyle.git", branch = "main", package = "hyle-smt-token", default-features = false }

contracts = { path = "contracts", default-features = false, package = "contracts" }
board_game = { path = "contracts/board_game", package = "board_game" }
crash_game = { path = "contracts/crash_game", package = "crash_game" }

degen_party = { path = "degen_party" }

[workspace.package]
version = "0.4.1"
edition = "2021"

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
sparse-merkle-tree = { git = "https://github.com/hyli-org/sparse-merkle-tree", branch = "master" }

# [patch."https://github.com/Hyle-org/hyle"]
# hyle-contract-sdk = { path = "../hyle/crates/contract-sdk", package = "hyle-contract-sdk" }
# hyle-client-sdk = { path = "../hyle/crates/client-sdk", package = "hyle-client-sdk" }
# hyle-smt-token = { path = "../hyle/crates/contracts/smt-token", package = "hyle-smt-token" }
# hyle-modules = { path = "../hyle/crates/hyle-modules", package = "hyle-modules" }

[patch."https://github.com/Hyle-org/hyle"]
hyle-smt-token = { git = "https://github.com/hyli-org/hyle.git", branch = "light_smt_executor", package = "hyle-smt-token" }
sdk = { git = "https://github.com/hyli-org/hyle.git", branch = "light_smt_executor", package = "hyle-contract-sdk" }
client-sdk = { git = "https://github.com/hyli-org/hyle.git", branch = "light_smt_executor", package = "hyle-client-sdk" }
hyle-modules = { git = "https://github.com/hyli-org/hyle.git", branch = "light_smt_executor", package = "hyle-modules" }
