[package]
name = "crash_game"
version = "0.1.0"
edition = "2021"

[dependencies]
hyle-contract-sdk = { git = "https://github.com/hyle-org/hyle", branch = "sdk_secp256k1", features = [
    "tracing",
    #"sp1",
] }
anyhow = "1.0"
borsh = { version = "1.3", features = ["derive"] }
board-game-engine = { path = "../zkprogram" }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

sp1-zkvm = { version = "4.1.3", optional = true }

[features]
sp1 = ["dep:sp1-zkvm"]
