[package]
name = "crash_game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crash_game"
required-features = ["sp1"]

[dependencies]
hyle-contract-sdk = { git = "https://github.com/hyle-org/hyle", rev = "111c1a08a282389292d0076f7ec1e732d4439036", features = [
    "tracing",
] }
anyhow = "1.0"
borsh = { version = "1.3", features = ["derive"] }
board-game-engine = { path = "../zkprogram" }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8", default-features = false }

sp1-zkvm = { version = "4.2.0", optional = true }

[features]
sp1 = ["dep:sp1-zkvm", "hyle-contract-sdk/sp1"]
