[package]
name = "rollup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

tokio = { version = "1.42", features = ["full", "tracing"] }
tokio-util = { version = "0.7.14" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
borsh = { version = "1.2", features = ["derive"] }

hyle = { git = "https://github.com/hyle-org/hyle", tag = "v0.13.0-rc.2", default-features = false }
hyle-contract-sdk = { git = "https://github.com/hyle-org/hyle", tag = "v0.13.0-rc.2", features = [
    "full-model",
    "tracing",
    # "sp1",
] }

#sp1-sdk = { version = "4.0.0" }

board-game-engine = { path = "../zkprogram" }
crash_game = { path = "../crash_game" }

tokio-tungstenite = "0.21"
axum = { version = "0.8.1", features = ["ws"] }

opentelemetry = { version = "0.28" }
opentelemetry-prometheus = { version = "0.28.0" }
opentelemetry_sdk = "0.28.0"

# for comp with something...
#utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
#utoipa-axum = { version = "0.2.0" }
zip = "=2.4.2"

# Risc0 a tout pété
risc0-binfmt = "=1.2.5"
risc0-circuit-keccak = "=1.2.5"
risc0-zkp = "=1.2.5"
risc0-circuit-keccak-sys = "=1.2.5"
risc0-circuit-recursion = "=1.2.5"
risc0-sys = "=1.2.5"
risc0-circuit-recursion-sys = "=1.2.5"
risc0-groth16 = "=1.2.5"
futures = "0.3.31"
sha2 = "0.10.8"
rand = "0.9.0"

[profile.dev.package.sp1-sdk]
opt-level = 3

[build-dependencies]
sp1-helper = "4.0.1"
