[package]
name = "rollup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

tokio = { version = "1.44", features = ["full", "tracing"] }
tokio-util = { version = "0.7.14" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
borsh = { version = "1.2", features = ["derive"] }
futures = "0.3.31"
sha2 = "0.10.8"
rand = { version = "0.9", default-features = false }

hyle = { git = "https://github.com/hyle-org/hyle", branch = "sdk_secp256k1", default-features = false }
hyle-contract-sdk = { git = "https://github.com/hyle-org/hyle", branch = "sdk_secp256k1", default-features = false, features = [
    "full-model",
    "tracing",
    "sp1",
] }
hyle-client-sdk = { git = "https://github.com/hyle-org/hyle", branch = "sdk_secp256k1", default-features = false, features = [
    "sp1",
] }

sp1-sdk = { version = "4.0.0", default-features = false }

board-game-engine = { path = "../zkprogram" }
crash_game = { path = "../crash_game" }

tokio-tungstenite = "0.21"
axum = { version = "0.8.3", features = ["ws"] }

opentelemetry = { version = "0.28" }
opentelemetry-prometheus = { version = "0.28.0" }
opentelemetry_sdk = "0.28.0"

# for comp with something...
#utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
#utoipa-axum = { version = "0.2.0" }
#zip = "=2.4.2"

[build-dependencies]
sp1-helper = "4.0.1"

[features]
# Deploy test verifiers for faster/easier testing.
fake_proofs = []
