[package]
name = "board-game-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

borsh = { version = "1.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
anyhow = "1.0"
console_error_panic_hook = "0.1"

board-game-engine = { path = "../zkprogram" }
crash_game = { path = "../crash_game" }
hyle-contract-sdk = { git = "https://github.com/hyle-org/hyle", rev = "111c1a08a282389292d0076f7ec1e732d4439036", default-features = false }
hyle-model = { git = "https://github.com/hyle-org/hyle", rev = "111c1a08a282389292d0076f7ec1e732d4439036", default-features = false, features = [
    "full",
] }
