[package]
name = "board-game-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "board-game-engine"
required-features = ["sp1"]

[dependencies]
hyle-contract-sdk = { git = "https://github.com/hyle-org/hyle", rev = "111c1a08a282389292d0076f7ec1e732d4439036", default-features = false, features = [
    "tracing",
] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", default-features = false }
thiserror = "1.0"
uuid = { version = "1.6", features = ["serde"], default-features = false }
borsh = { version = "1.2", features = ["derive"] }
hex = "0.4"

sp1-zkvm = { version = "4.2.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = []
sp1 = ["dep:sp1-zkvm", "hyle-contract-sdk/sp1"]
